feat: server states